fix button spacing

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -13,3 +13,7 @@
 	"syntax",
     "starsnonscss"
 ;
+
+.btn-spacing {
+  	margin-bottom: 10px;
+}
